Fixed quote carousel controls vertical alignment bug

--- a/resources/scss/modular/_block-quote-carousel.scss
+++ b/resources/scss/modular/_block-quote-carousel.scss
@@ -40,6 +40,7 @@
 				grid-template-columns: repeat(2, 1fr);
 				grid-column-gap: 632px;
 				justify-content: space-between;
+				align-content: center;
 				z-index: 3;
 				pointer-events: none;
 
